--- a/main.html
+++ b/main.html
@@ -7,7 +7,21 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>
+	Time, Space,
+	<br>
+    Complexity
+	</h1>
+	<p>
+	 Time complexity,
+	 <br>
+	 efficient
+	</p>
+	<p>
+	 <b>Space Complexity</b>,
+	 <br>
+	 O(n)
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
